[package]
name = "sourcenav"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitbuffer = "0.7.1"
err-derive = "0.2.4"
aabb-quadtree = "0.2.0"
euclid = "0.19"

[dev-dependencies]
doc-comment = "0.3.3"