[package]
name = "sourcenav"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "parsing of SourceEngine .nav files"
license = "AGPL-3.0"
repository = "https://github.com/icewind1991/sourcenav"
documentation = "https://docs.rs/sourcenav"
readme = "README.md"

[dependencies]
bitbuffer = "0.7.1"
err-derive = "0.2.4"
aabb-quadtree = "0.2.0"
euclid = "0.19"

[dev-dependencies]
doc-comment = "0.3.3"